overflow fix

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,6 +6,7 @@
 body {
   background-color: $backgroundColor;
   color: #fff;
+  overflow-x: hidden;
 }
 
 h2 {
